deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <ENV>

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: <ENV>-castillians-frontend-deployment
  namespace: <ENV>
spec:
  selector:
    matchLabels:
      app: <ENV>-castillians-frontend
  replicas: 2
  template: # template for the pods
    metadata:
      labels:
        app: <ENV>-castillians-frontend
    spec:
      containers:
      - name: <ENV>-castillians-frontend
        image: registry.digitalocean.com/castille/castille-website:<VERSION>
        resources:
          requests:
             memory: 100Mi
             cpu: 0.25

        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: <ENV>-castillians-frontend-svc
  namespace: <ENV>

spec:

  selector:
    app: <ENV>-castillians-frontend

  ports:
    - name: http
      port: 80

  type: ClusterIP
